templates/starter-project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starter-project-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      # - path: /hello-world-one(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: aks-helloworld-one
      #       port:
      #         number: 80
      # - path: /hello-world-two(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: aks-helloworld-two
      #       port:
      #         number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: starter-project
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starter-project-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: starter-project
            port: 
              number: 8080
        path: /static(/|$)(.*)
